Removed second component

--- a/virus.cfg
+++ b/virus.cfg
@@ -9,18 +9,11 @@ distance_isolation=50.0;
 components=
 (
 	{
-		name="1";
+		name="Northland";
 		coordLat=175.00
 		coordLong=34.00;
 		radius=200000.0;
 		population=190000;
-	},
-	{
-		name="2";
-		coordLat=176.00
-		coordLong=35.00;
-		radius=1000.0;
-		population=1000;
 	}
 );
 
