Added stages and parameters

--- a/virus.cfg
+++ b/virus.cfg
@@ -1,10 +1,76 @@
 
-//distance of contamination checks with no isolation in place
-distance_no_isolation=10000.0;
 
-//distance for contamination with isolation in place
-distance_isolation=50.0;
+states=
+(
+	{
+		name="level1";
+		distance=1000.0;
+		contacts=10;
+		days=
+		(
+			{
+				days=120;
+			  	probability=1.0;
+			},
+			{
+				days=150;
+			   	probability=1.0;
+			}
+		)
+	},
+	{
+		name="level2";
+		distance=500.0;
+		contacts=5;
+		days=
+		(
+			{
+				days=10;
+			   	probability=1.0;
+			},
+			{
+				days=110;
+			   	prbability=1.0;
+			}
+		)
+	},
+	{
+		name="level3";
+		distance=250.0;
+		contacts=5;
+		days=
+		(
+			{
+				days=20;
+			   	probability=1.0;
+			},
+			{
+				days=70;
+			   	probability=1.0;
+			}
+		)
+	},
+	{
+		name="level4";
+		distance=100.0;
+		contacts=5;
+		days=
+		(
+			{
+				days=30;
+			   	probability=1.0;
+			}
+		)
+	}
+)
 
+parameters=
+{	
+	immunity=0.95;
+	death=0.020;
+	difficult=0.05;
+	contagion=[0.0, 0.15, 0.25, 0.01];
+}
 
 components=
 (
