--- a/virus.cfg
+++ b/virus.cfg
@@ -53,7 +53,7 @@ states=
 		days=
 		(
 			{
-				days=135;
+				days=25;
 			   	probability=1.0;
 			}
 		)
@@ -62,20 +62,20 @@ states=
 
 parameters=
 {	
-	immunity=1.0;
-	death=0.02;
-	difficult=0.05;
-	contagion=[0.0, 0.10, 0.15, 0.01];
+	immunity=0.95;
+	death=0.005;
+	difficult=0.03;
+	contagion=[0.0, 0.10, 0.12, 0.01];
 }
 
 components=
 (
 	{
-		name="Northland";
+		name="New Zealand";
 		coordLat=175.00
 		coordLong=34.00;
-		radius=25000.0;
-		population=140000;
+		radius=294000.0;
+		population=5000000;
 	}
 );
 
