--- a/virus.cfg
+++ b/virus.cfg
@@ -27,6 +27,7 @@ states=
 			{
 				days=80;
 			   	prbability=1.0;
+				inject=[20,5,10]
 			}
 		)
 	},
@@ -63,8 +64,8 @@ states=
 parameters=
 {	
 	immunity=0.95;
-	death=0.005;
-	difficult=0.03;
+	death=0.001;
+	difficult=0.01;
 	contagion=[0.0, 0.10, 0.12, 0.01];
 }
 
